# final_project_task

./: .~lock.Защита проекта.pptx#  CMakeLists.txt  CMakeLists.txt.user.3eadc13  CMakeLists.txt.user.720ca02  README.md  async.h  build_20241024-1_amd64.deb  database_cosem.h  mapper_all.h  produser_consumer.h  test_str_file.cpp  test_str_file.h  using_databse.cpp  Защита проекта.pptx
.github/workflows/: release.yml
average/: Makefile  mapper.cpp  mapper_av_code.cpp  reducer.cpp  test_average.cpp
data_base/: data_base.cpp
dispersion/: README.md  mapper.cpp  reducer.cpp  test_dispersion.cpp
gurux/development/include/: GXBytebuffer.h  GXDLMSPlcRegister.h  GXDLMSSha256.h
libasync/: async.cpp  libasync.sln  libasync.vcxproj  libasync.vcxproj.filters
libasync/Debug/: libasync.exe.recipe  libasync.ilk  libasync.vcxproj.FileListAbsolute.txt  vc142.idb
libasync/Debug/libasync.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libasync.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/: server.cpp  server.h
